<resources>
    <string name="app_name">ec-electric</string>
    <string name="full_name">EC-Online</string>
    <string name="version">version %1$s.%2$d</string>

    <!-- Экран "1.Вход" -->
    <string name="edit_login">Логин</string>
    <string name="edit_password">Пароль</string>
    <string name="text_save_login">Сохранить логин и пароль</string>
    <string name="button_enter">Войти</string>
    <string name="text_ender">Логин и временный пароль вы можете получить,
        позвонив по телефону:%1$s</string>
    <string name="text_phone">+7(495)7300230</string>

    <!-- Экран "2.Стартовый" и меню "8.Меню", заголовки экранов -->
    <string name="text_request">Проверка наличия товара</string>
    <string name="text_order">Сделать заказ</string>
    <string name="text_basket">Корзина</string>
    <string name="text_list_unconfirmed">Неподтвержденные резервы</string>
    <string name="text_list_ordered">Заказы</string>
    <string name="text_list_reserved">Резервы</string>
    <string name="text_list_canceled">Аннулированные и просроченные счета</string>
    <string name="text_list_shipped">История отгрузок</string>
    <string name="text_item_unconfirmed">Неподтвержденный резерв</string>
    <string name="text_item_ordered">Заказ</string>
    <string name="text_item_reserved">Резерв</string>
    <string name="text_item_canceled">Аннулированный счет</string>
    <string name="text_item_overdie">Просроченный счет</string>
    <string name="text_item_shipped">Отгрузка</string>
    <string name="text_item_invoice">Детали счета</string>
    <string name="text_exit">Выход</string>
    <string name="image_logo">Логотип EC-Online</string>
    <string name="text_drawer_open">Открыть меню</string>
    <string name="text_drawer_close">Скрыть меню</string>

    <!-- Экран "3.Заявки по коду" -->
    <string name="text_enter_number_or_product">Введите код и количество товара:</string>
    <string name="label_product">Код товара</string>
    <string name="label_count">Количество</string>
    <string name="check_fulltext_search">Отключить расширенный поиск</string>
    <string name="button_check"><![CDATA[Проверить >]]></string>
    <string name="link_store_file">Скачать складские остатки</string>
    <string name="link_specifications_file">Посмотреть ранее загруженные спецификации</string>

    <!-- Экран "4.Заявки из Excel" -->
    <string name="text_select_file">Выберите Excel-файл (формат XLS, XLSX, ODS) В файле должен быть столбец с товарами и столбец с количеством товаров</string>
    <string name="button_select">Обзор…</string>
    <string name="label_product_column_number">№ столбца с кодом товара</string>
    <string name="label_count_column_number">№ столбца с количеством</string>
    <string name="link_file_example">Пример файла</string>

    <!-- Экран "5.Таблица заявок" -->
    <string name="x">X</string>
    <string name="text_comment">Комментарий к заказу</string>
    <string name="button_to_busket">В корзину</string>
    <string name="button_clear">Очистить корзину</string>
    <string name="button_add">Добавить</string>
    <string name="button_issue">Оформить</string>
    <string name="text_count">%1$d</string>
    <string name="text_money">%1$d руб.</string>
    <string name="text_total">Итого: %1$d руб.</string>
    <string name="text_basket_item_delete">Удалить строку из корзины</string>
    <string name="text_order_processed">Заказ № %1$d оформлен</string>
    <string name="text_product_not_found">Товар не найден</string>
    <string name="text_product_not_select">Не выбран товар для добавления в корзину</string>
    <string name="text_variant_not_select">В результатах несколько вариантов - сделайте свой выбор</string>
    <string name="button_select_all">Выбрать все</string>
    <string name="button_select_none">Очистить выделение</string>

    <!-- Статусы количества -->
    <string name="status_black">Неизвестно</string>
    <string name="status_brown">Товар %1$s не найден</string>
    <string name="status_violet">Превышено допустимое число проверок количества, попробуйте позднее</string>
    <string name="status_blue">Проверить наличие</string>
    <string name="status_red">Нет</string>
    <string name="status_orange">Частично доступно</string>
    <string name="status_yellow">Доступно %1$d</string>
    <string name="status_green">В наличии</string>
    <string name="text_multiplicity">Увеличено до кратности минимальной упаковки: %1$d (по %1$d в упаковке)</string>

    <!-- Экран "6.Счета" -->
    <string name="text_invoice">Счет № %1$d от %2$s</string>
    <string name="text_invoice_short">Счет № %1$d</string>
    <string name="text_waybill">Накладная № %1$d</string>
    <string name="button_detail">Подробнее</string>
    <string name="button_invoice">Счет</string>
    <string name="text_share">Поделиться</string>

    <!-- Статусы счетов -->
    <string name="status_unconfirmed">Неподтвержденный резерв</string>
    <string name="status_reserved">Резерв</string>
    <string name="status_ordered">Заказ</string>
    <string name="status_canceled">Аннулирован</string>
    <string name="status_overdie">Просрочен</string>
    <string name="status_shipped">Отгружен</string>

    <!-- Показ информации и ошибок -->
    <string name="text_info">Информация</string>
    <string name="text_error">Ошибка</string>
    <string name="text_server_data_success">Успешно.\nДанные: %1$s</string>
    <string name="text_server_data_error">Ошибка\nСообщение: %1$s</string>
    <string name="text_response_error">Ошибка\n%1$s</string>
    <string name="text_response_failure">Ошибка:\n%1$s</string>
    <string name="button_back">Вернуться назад</string>
    <string name="text_empty" />

    <!-- В разработке -->
    <string name="text_in_develop_download_remains">Скачивание остатков - в разработке</string>
    <string name="test_in_develop_download_invoice">Скачивание счета - в разработке</string>
    <string name="text_acitivity_not_found">Не найден экран %s</string>
    <string name="error_UnknownHostException">Соединение с интернетом нестабильно</string>
    <string name="error_SocketTimeoutException">Низкая скорость соединения с интернетом</string>

    <!-- Прочее -->

</resources>
