<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_request"
            android:icon="@drawable/request"
            android:title="@string/text_request"/>
        <item
            android:id="@+id/action_order"
            android:icon="@drawable/order"
            android:title="@string/text_order"/>
        <item
            android:id="@+id/action_basket"
            android:icon="@drawable/basket"
            android:title="@string/text_basket"/>
        <item
            android:id="@+id/action_unconfirmed"
            android:icon="@drawable/unconfirmed"
            android:title="@string/text_list_unconfirmed"/>
        <item
            android:id="@+id/action_reserved"
            android:icon="@drawable/reserved"
            android:title="@string/text_list_reserved"/>
        <item
            android:id="@+id/action_ordered"
            android:icon="@drawable/ordered"
            android:title="@string/text_list_ordered"/>
        <item
            android:id="@+id/action_canceled"
            android:icon="@drawable/canceled"
            android:title="@string/text_list_canceled"/>
        <item
            android:id="@+id/action_shipped"
            android:icon="@drawable/shipped"
            android:title="@string/text_list_shipped"/>
        <item
            android:id="@+id/action_exit"
            android:title="@string/text_exit"/>
    </group>
</menu>