<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_request"
        android:icon="@drawable/request"
        android:title="@string/text_request"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_order"
        android:icon="@drawable/order"
        android:title="@string/text_order"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_basket"
        android:icon="@drawable/basket"
        android:title="@string/text_basket"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_unconfirmed"
        android:icon="@drawable/unconfirmed"
        android:title="@string/text_list_unconfirmed"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_reserved"
        android:icon="@drawable/reserved"
        android:title="@string/text_list_reserved"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_ordered"
        android:icon="@drawable/ordered"
        android:title="@string/text_list_ordered"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_canceled"
        android:icon="@drawable/canceled"
        android:title="@string/text_list_canceled"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_shipped"
        android:icon="@drawable/shipped"
        android:title="@string/text_list_shipped"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:orderInCategory="100"
        android:id="@+id/action_exit"
        android:title="@string/text_exit"
        app:showAsAction="never"/>
</menu>