<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewModel"
            type="club.plus1.ec_electric.viewmodel.EnterViewModel" />
    </data>
    <LinearLayout
        tools:ignore="UseCompoundDrawables"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <ImageView
            android:id="@+id/splash_screen"
            style="@style/AppTheme.ECElectric.Logo"
            android:layout_weight="1"
            android:src="@drawable/splash"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/editLogin"
            style="@style/AppTheme.ECElectric.Edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edit_login"
            android:inputType="textPersonName"
            android:text="@{viewModel.login}"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/editPassword"
            style="@style/AppTheme.ECElectric.Edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edit_password"
            android:inputType="textPassword"
            android:text="@{viewModel.password}"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/buttonEnter"
            style="@style/AppTheme.ECElectric.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{()->viewModel.onEnter(context)}"
            android:text="@string/button_enter" />

        <TextView
            android:id="@+id/textEnter"
            style="@style/AppTheme.ECElectric.Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{@string/text_ender + @string/text_phone}"
            android:onClick="@{()->viewModel.onPhone(context, @string/text_phone)}"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:ignore="UselessLeaf">

        </LinearLayout>

    </LinearLayout>
</layout>